<resources>
    <string name="app_name">Pirulina</string>
    <string name="image_of_the_witch">Image of the witch</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_up_yet">If you are not signed up yet you can do it here</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="create_a_new_user">CREATE A NEW USER</string>
    <string name="edit">Edit</string>

    <!-- TOAST STRINGS-->
    <string name="toast_something_gonne_wrong">Something gonne wrong</string>
    <string name="toast_password_not_validated">The password have to be the same in both</string>
    <string name="toast_user_created">User Created Succesfully</string>
    <string name="toast_login_succesful">Welcome!</string>
    <string name="toast_wrong_password">Incorrect Password</string>
    <string name="toast_invalid_login">Incorrect Data</string>
    <string name="toast_other_error">Something failed trying to log in</string>
    <string name="toast_empty_username">Please fill de Username field</string>
    <string name="toast_empty_password">Please fill de Password field</string>
    <string name="toast_wrong_user">That User doesn\'t exist</string>
    <string name="toast_user_created_success">User created</string>
    <string name="toast_user_updated_success">User updated</string>

    <!-- DIALOG STRINGS -->
    <string name="dialog_logoff">Would you like to log off?</string>
    <string name="dialog_goback">Would you like to go back and delete changes?</string>
    <string name="dialog_sexist">DENUNCIAR <b>092 / 112</b>

NO DENUNCIAR <b>94 470 14 60</b>

DENUNCIAR:

· En caso de violación: no lavarse,
ni cambiarse de ropa, ni comer ni beber.

· Ir al hospital: hacer reconocimiento médico,
tramitar denuncia y pedir copia del informe.

· Ir al juzgado de guardia: realizar denuncia,
solicitar informe médico y copia de denuncia.

NO DENUNCIAR:

· Puedes ir al hospital pero ahí es obligatorio
tramitar denuncia.

PARA MÁS INFORMACIÓN:

Servicio municipal especializado
94 420 48 38
(8h - 15h)</string>
    <string name="dialog_homophobic">DENUNCIAR / NO DENUNCIAR:

Aldarte-Berdindu
94 423 73 96
(10h - 14h)

Errespetuz
675 459 317
(10h - 18h)

Estas asociaciones te ayudarán con
cualquier pregunta y valorarán otros
recursos en el caso de no querer
hacer una denuncia.

·AGRESIÓN FÍSICA: identificar agresor,
sacar foto a ser posible. Acudir a la
asistencia médica y realizar reconocimiento,
después ir al juzgado de guardia.

·AGRESIÓN VERBAL: también pueden
ser denunciadas.

PARA MÁS INFORMACIÓN:

Servicio municipal urgencias sociales
94 470 14 60
</string>
    <string name="dialog_racist">DENUNCIAR:

·AGRESIÓN FÍSICA: identificar agresor,
sacar foto a ser posible. Acudir a la
asistencia médica y realizar reconocimiento,
después ir al juzgado de guardia.

·AGRESIÓN VERBAL: también pueden
ser denunciadas.


NO DENUNCIAR:

· Puedes ir al hospital pero ahí es obligatorio
tramitar denuncia.
· Llamar a SOS RACISMO para valorar
otros recursos disponibles.
688 62 99 96
94 479 03 10

PARA MÁS INFORMACIÓN:

Servicio municipal urgencias sociales
94 470 14 60

SOS RACISMO
688 62 99 96
94 479 03 10
</string>

    <!-- OPTIONS STRINGS -->
    <string name="option_map">Info Points</string>
    <string name="option_info">Info</string>
    <string name="option_sexist">Sexist</string>
    <string name="option_racist">Racist</string>
    <string name="option_homophobic">Homophobic</string>
    <string name="option_about_us">About Us</string>

    <!-- NAV STRINGS -->
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_title">Options</string>
    <string name="nav_header_subtitle">Here you got necessary options</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- ACTION STRINGS -->
    <string name="action_settings">My User</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_contacts">My Contacts</string>

    <!-- TITLE STRINGS -->
    <string name="title_activity_main">Pirulina</string>
    <string name="title_attacks">Attacks</string>
    <string name="title_information">Information</string>
    <string name="ok">Ok</string>


</resources>
